refactor DeleteReview API
